--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "bl": "^0.9.1",
-    "inherits": "^2.0.1"
+    "inherits": "^2.0.1",
+    "through2": "^0.6.3"
   }
 }
