--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "bl": "^0.9.1",
     "inherits": "^2.0.1",
+    "reduplexer": "^1.0.0",
     "through2": "^0.6.3"
   }
 }
