--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - 0.10
   - 0.8
+before_install:
+  - npm install npm@v1.4-latest -g
 matrix:
   fast_finish: true
   allow_failures:
