--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
+sudo: false
 node_js:
+  - iojs-v2
+  - iojs-v1
+  - 0.12
   - 0.10
   - 0.8
 before_install:
-  - npm install npm@v1.4-latest -g
-matrix:
-  fast_finish: true
-  allow_failures:
-    - node_js: "0.11"
+  - node -v | grep v0.8 && npm install npm@1.4.29 -g
