--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://github.com/mqttjs/mqtt-packet",
   "devDependencies": {
     "faucet": "0.0.1",
-    "pre-commit": "0.0.9",
+    "pre-commit": "^1.1.1",
     "tape": "^4.2.0"
   },
   "dependencies": {
