--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: node_js
 sudo: false
 node_js:
-  - 4.2
-  - 4.1
-  - 4.0
+  - 5
+  - 4
   - iojs-v3
   - iojs-v2
   - iojs-v1
   - 0.12
   - 0.10
+script:
+  node run ci
 before_install:
   - node -v | grep v0.8 && npm install npm@1.4.28 -g || echo "no need to update NPM"
