--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ node_js:
   - 0.12
   - 0.10
 script:
-  node run ci
+  npm run ci
 before_install:
   - node -v | grep v0.8 && npm install npm@1.4.28 -g || echo "no need to update NPM"
