Use process-nextick-args for nextTick shimming.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "bl": "^1.0.0",
-    "inherits": "^2.0.1"
+    "inherits": "^2.0.1",
+    "process-nextick-args": "^1.0.6"
   }
 }
