--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "5.5.0",
   "description": "Parse and generate MQTT packets like a breeze",
   "main": "mqtt.js",
+  "types": "types/index.d.ts",
   "contributors": [
     "Matteo Collina <matteo.collina@gmail.com> (https://github.com/mcollina)",
     "Adam Rudd <damvrr@gmail.com>",
