update logger to pino

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/mqttjs/mqtt-packet",
   "devDependencies": {
+    "pino-pretty": "^7.5.1",
     "pre-commit": "^1.2.2",
     "readable-stream": "^3.6.0",
     "standard": "^16.0.0",
@@ -42,7 +43,7 @@
   },
   "dependencies": {
     "bl": "^5.0.0",
-    "debug": "^4.1.1",
+    "pino": "^7.8.0",
     "process-nextick-args": "^2.0.1"
   }
 }
