--- a/package.json
+++ b/package.json
@@ -2,8 +2,28 @@
   "name": "mqtt-packet",
   "version": "9.0.1",
   "description": "Parse and generate MQTT packets like a breeze",
-  "main": "mqtt.js",
-  "types": "types/index.d.ts",
+  "main": "./build/index.js",
+  "exports": {
+    ".": {
+      "browser": {
+        "import": "./dist/mqtt-packet.esm.js",
+        "default": "./dist/mqtt-packet.min.js"
+      },
+      "default": "./build/index.js"
+    },
+    "./package.json": "./package.json",
+    "./*.map": "./build/*.js.map",
+    "./dist/*": "./dist/*.js",
+    "./*": "./build/*.js"
+  },
+  "types": "build/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./build/index.d.ts"
+      ]
+    }
+  },
   "contributors": [
     "Matteo Collina <matteo.collina@gmail.com> (https://github.com/mcollina)",
     "Adam Rudd <damvrr@gmail.com>",
@@ -13,7 +33,13 @@
   ],
   "scripts": {
     "test": "tape test.js | tap-spec && standard",
-    "ci": "tape test.js && node testRandom && standard"
+    "ci": "tape test.js && node testRandom && standard",
+    "lint": "eslint --ext .ts .",
+    "lint-fix": "eslint --fix --ext .ts .",
+    "build:ts": "rimraf build/ && tsc -p tsconfig.build.json",
+    "build:browser": "node esbuild.js",
+    "build": "npm run build:ts && npm run build:browser",
+    "prepare": "npm run build"
   },
   "pre-commit": "test",
   "repository": {
@@ -34,11 +60,22 @@
   },
   "homepage": "https://github.com/mqttjs/mqtt-packet",
   "devDependencies": {
+    "@types/node": "^22.13.5",
+    "esbuild": "^0.25.0",
+    "esbuild-register": "^3.6.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "pre-commit": "^1.2.2",
+    "prettier": "^3.5.2",
     "readable-stream": "^4.4.2",
     "standard": "^17.1.0",
     "tap-spec": "^5.0.0",
-    "tape": "^5.7.2"
+    "tape": "^5.7.2",
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "bl": "^6.0.8",
